--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Poster</string>
     <string name="poster">Poster</string>
+    <string name="add_to_watchlist">Add to Watchlist</string>
+    <string name="selectedimage">SelectedImage</string>
 </resources>
