--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="textname">textName</string>
     <string name="textcreatedby">textCreatedBy</string>
     <string name="textstory">textStory</string>
+    <string name="name">Eli</string>
 </resources>
